--- a/static/index.html
+++ b/static/index.html
@@ -38,7 +38,7 @@
                     </section>
 
                     <section>
-                        <h5 class="mb-5">Sponsoren</h5>
+                        <h5 class="my-5">Sponsoren</h5>
 
                         <h3>meerfarbig GmbH & Co. KG</h3>
                         <p class="lead">Unterstützt uns mit einem Server in Frankfurt und IPv6-Transit.</p>
